Ingress.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: helloapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: helloapp
  name: deployment-helloapp
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-2024
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-2024
    spec:
      containers:
      - image: anilkumarb782/sample:helloapp
        imagePullPolicy: Always
        name: app-2024
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: helloapp
  name: service-2024
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: app-2024
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: helloapp
  name: ingress-2048
spec:
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-2048
              port:
                number: 80
